--- a/app/Resources/translations/navigationui.en.yml
+++ b/app/Resources/translations/navigationui.en.yml
@@ -6,6 +6,7 @@ container_menu:
   my_feeds:             My feeds
   return:               Back
   need_tags:            Demands
+  my_playlists:         My playlists
   
 top_bar:
   my_account:           My account
@@ -45,7 +46,8 @@ title:
   element:
     edit:               Modify an element.
   need_tags:            Share asking tags
-  
+
+
 bottom_menu:
   about:                About
   development:          Beta version, development in progress
