--- a/app/Resources/translations/userform.fr.yml
+++ b/app/Resources/translations/userform.fr.yml
@@ -12,7 +12,7 @@ password:
 token:     Code d'inscription
 mail_newsletter:  Je souhaite recevoir des emails de la part de Muzi.ch
 mail_partner:     Je souhaite recevoir des emails de la part de partenaires de Muzi.ch (Ce service n'est pas actif pas pour le moment)
-cgu_accepted:     J'ai lu et j'accepete les <a href="%url%">condition générales d'utilisation de Muzi.ch</a>
+cgu_accepted:     J'ai lu et j'accepte les <a href="%url%">conditions générales d'utilisation de Muzi.ch</a>
 
 help:
   token:   |
