--- a/app/Resources/translations/userui.fr.yml
+++ b/app/Resources/translations/userui.fr.yml
@@ -100,7 +100,7 @@ my_account:
     error:          Une erreur est survenue lors de la mise à jour de vos paramètres de vie privée
   delete:
     title:          Supprimer mon compte
-    text:           Attention: Il vous sera impossible d'annuler cette action après avoir confirmé la suppression de votre compte !
+    text:           "Attention: Il vous sera impossible d'annuler cette action après avoir confirmé la suppression de votre compte !"
     submit:         Je confirme vouloir supprimer définitivement ce compte
 
 change_username:
