Amélioration mise en page pour la dimension du iframe

--- a/app/Resources/translations/navigationui.fr.yml
+++ b/app/Resources/translations/navigationui.fr.yml
@@ -28,6 +28,7 @@ home:
   add_element_box:
     close:              Fermer l'ajout d'élément
     title:              Ajouter un partage
+    title_external:     Ajouter un partage sur Muzi.ch
   check_url:            Ajouter
   
 group:
